# bevy_round_ui

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
examples/: autosize.rs  buttons.rs  circle.rs  compare.rs  shapes.rs  simple.rs  superellipse.rs  superellipse_transparency.rs
src/: assets.rs  autosize.rs  lib.rs  plugin.rs  round_rect.rs  round_rect.wgsl  shader.wgsl  superellipse.rs  superellipse.wgsl  types.rs
