[package]
name = "bevy_round_ui"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Robert Dodd"]
description = "A simple rounded-rect material shader for bevy_ui."
repository = "https://github.com/robertdodd/bevy_round_ui"
homepage = "https://github.com/robertdodd/bevy_round_ui"
keywords = ["bevy", "gui", "gamedev"]
categories = ["gui", "game-development"]
readme = "README.md"
exclude = ["images/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13"
